fix bottom navaigaiton buttons spacing

--- a/src/components/shared/PopupMessage.scss
+++ b/src/components/shared/PopupMessage.scss
@@ -7,6 +7,7 @@
   background: #1D242C;
   border-radius: 14px;
   padding: 28px 23px;
+  max-width: 350px;
 
   .text {
     font-family: 'Montserrat', sans-serif;
@@ -19,6 +20,19 @@
     text-align: center;
 
     color: #FFFFFF;
+  }
+  h3 {
+    font-family: 'Montserrat', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 111.4%;
+    /* identical to box height, or 27px */
+
+    text-align: center;
+
+    color: #FFFFFF;
+    margin-bottom: 18px;
   }
   .controls {
     margin-top: 40px;
